examples/type_system/failing/175_handle_arm_missing_arrow.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

let x = 1 handle IO { print(resume, msg) resume(msg) }
let after = 1
